<resources>
    <!--Unit Seven Begin-->
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <!--Unit Eleven Challenge Begin-->
    <string name="btn_tolast">ToLast</string>
    <string name="btn_tofirst">ToFirst</string>

    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
   <!-- <string name=""></string>-->

</resources>
